--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<script src="js/main.js" defer type="module"></script>
+		<script src="js/main.js" type="module"></script>
 		<title>Rest Countries API</title>
 	</head>
 	<body>
