--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				Back
 			</button>
 			<div class="modal__body">
-				<img src="" alt="" class="modal__flag" />
+				<img src="./" alt="Flag" class="modal__flag" />
 				<div class="modal__content">
 					<h1 class="modal__title"></h1>
 					<div class="modal__facts">
